test/bad/generics/void03.px

func f() def
    return
    return null

f()
